--- a/tech-cv/index.html
+++ b/tech-cv/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Краткое резюме"/>
-<meta property="og:image" content="./assets/images/1.jpg"/>
+    <meta property="og:title" content="junior front-end developer"/>
+    <meta property="og:image" content="./assets/images/1.jpg"/>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="./assets/icons/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
