feat: add new photo

--- a/tech-cv/index.html
+++ b/tech-cv/index.html
@@ -53,7 +53,7 @@
           <div class="container">
             <div class="about-container">
               <div class="photo">
-                <img class="hero-image" src="./assets/images/avatar.png" alt="avatar"/>
+                <img class="hero-image" src="./assets/images/main-photo.jpg" alt="avatar"/>
               </div>
               <div class="about">
                 <h1 class="about-title">About me</h1>
