--- a/tech-cv/index.html
+++ b/tech-cv/index.html
@@ -8,12 +8,14 @@
     <meta property="og:image" content="./assets/images/1.jpg"/>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="./assets/icons/favicon.svg">
+    <link rel="stylesheet" media="all" href="animate.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,300&display=swap"
       rel="stylesheet"
     />
+    
     <title>Technology CV</title>
   </head>
   <body>
@@ -23,11 +25,11 @@
         <div class="container">
           <div class="header-container">
             <div class="logo">
-              <span class="name">ARTHUR RODIONOV</span>
+              <span class="name flipInX wow">ARTHUR RODIONOV</span>
               <span class="subtitle">JUNIOR FRONTEND DEVELOPER</span>
             </div>
             <nav class="nav">
-              <ul class="nav-list">
+              <ul class="nav-list fadeIn wow">
                 <li class="nav-item">
                   <a href="" class="nav-link active">About</a>
                 </li>
@@ -53,11 +55,11 @@
           <div class="container">
             <div class="about-container">
               <div class="photo">
-                <img class="hero-image" src="./assets/images/main-photo.jpg" alt="avatar"/>
+                <img class="hero-image fadeIn wow" src="./assets/images/main-photo.jpg" alt="avatar"/>
               </div>
               <div class="about">
-                <h1 class="about-title">About me</h1>
-                <p class="description">
+                <h1 class="about-title bounceInDown wow">About me</h1>
+                <p class="description bounceInRight wow">
                   Hey! I am 28 years old and I am a beginner developer. I like programming. I have completed several training projects
                   and now I would like to take part in the creation of a real,
                   commercial project. My goal is to learn a pure JavaScript at a
@@ -76,7 +78,7 @@
         <section class="skills" id="skills">
           <div class="wrapper">
             <div class="container">
-              <h2 class="section-title">SKILLS</h2>
+              <h2 class="section-title fadeInDown wow">SKILLS</h2>
               <div class="skills-container">
                 <div class="skills-wrapper">
                 <ul class="section-list">
@@ -90,11 +92,11 @@
                       Graphics:<span> Figma</span>
                     </li>
                 </ul>
-                  <p class="skills-description">I also plan to study application development with the help of SASS & Webpack. <br>
+                  <p class="skills-description bounceInLeft wow">I also plan to study application development with the help of SASS & Webpack. <br>
            Also, on the right you can see my first victories on the way of the developer,<br>
             namely my first certificate!</p>
                 </div>
-                <div class="certificate">
+                <div class="certificate fadeIn wow">
                    <img src="./assets/images/certificate.png" alt="certificate" width="500" height="300">
                 </div>
               </div>
@@ -105,27 +107,27 @@
         <section class="projects" id="projects">
           <div class="wrapper">
             <div class="container">
-              <h2 class="section-title">PROJECTS</h2>
+              <h2 class="section-title fadeInDown wow">PROJECTS</h2>
               <div class="projects-container">
                 <p class="projects-description">Below are my modest projects during the course of the front-end developer course from RS School</p>
               </div>
               <div class="cards">
 
                 <div class="card-container">
-                    <img class="profiles" src="./assets/images/portfolio.png" alt="portfolio" width="350" height="210">
+                    <img class="profiles fadeIn wow" src="./assets/images/portfolio.png" alt="portfolio" width="350" height="210">
                       <a href="https://rolling-scopes-school.github.io/leafdeharmony-JSFEPRESCHOOL/portfolio/" target="_blank">
                       <button class="btn-view">GO TO VIEW</button>
                     </a>
                 </div>
 
-                <div class="card-container">
+                <div class="card-container fadeIn wow">
                     <img class="profiles" src="./assets/images/shelter.png" alt="shelter" width="350" height="210">
                       <a href="https://rolling-scopes-school.github.io/leafdeharmony-JSFE2022Q1/shelter/pages/main/" target="_blank">
                       <button class="btn-view">GO TO VIEW</button>
                     </a>
                 </div>
 
-                <div class="card-container">
+                <div class="card-container fadeIn wow">
                     <img class="profiles" src="./assets/images/ecosounds.png" alt="ecosounds" width="350" height="210">
                       <a href="https://rolling-scopes-school.github.io/leafdeharmony-JSFEPRESCHOOL/eco-sounds/" target="_blank">
                       <button class="btn-view">GO TO VIEW</button>
@@ -142,7 +144,7 @@
         <div class="wrapper">
           <div class="container">
             <div class="contacts-container">
-              <div class="social-list">
+              <div class="social-list fadeIn wow">
                 <a href="https://github.com/LeafdeHarmony" target="_blank">
                <img class="social-icons" src="./assets/icons/github.svg" alt="github" width="35" height="35">
                 </a>
@@ -164,6 +166,7 @@
           </div>
         </div>
       </footer>
-    
+    <script src="wow.min.js"></script>
+    <script>new WOW().init();</script>
   </body>
 </html>
