--- a/tech-cv/pages/main/index.html
+++ b/tech-cv/pages/main/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="junior front-end developer"/>
     <meta property="og:image" content="./assets/images/1.jpg"/>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../main/styles.css" />
+    <link rel="stylesheet" media="all" href="../main/animate.css">
     <link rel="icon" href="./assets/icons/favicon.svg">
-    <link rel="stylesheet" media="all" href="animate.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,6 +30,12 @@
             </div>
             <nav class="nav">
               <ul class="nav-list fadeIn wow">
+
+                <div class="logo-burger">
+                <span class="name flipInX wow">ARTHUR RODIONOV</span>
+                <span class="subtitle">JUNIOR FRONTEND DEVELOPER</span>
+              </div>
+
                 <li class="nav-item">
                   <a href="" class="nav-link active">About</a>
                 </li>
@@ -40,10 +46,20 @@
                   <a href="#projects" class="nav-link">Projects</a>
                 </li>
                 <li class="nav-item">
+                  <a href="./pages/index.html" class="nav-link">Music</a>
+                </li>
+                <li class="nav-item">
                   <a href="#footer" class="nav-link">Contacts</a>
                 </li>
               </ul>
             </nav>
+
+            <div class="burger">
+            <span class="line line_1"></span>
+            <span class="line line_2"></span>
+            <span class="line line_3"></span>
+          </div>
+
           </div>
         </div>
       </header>
@@ -55,7 +71,7 @@
           <div class="container">
             <div class="about-container">
               <div class="photo">
-                <img class="hero-image fadeIn wow" src="./assets/images/main-photo.jpg" alt="avatar"/>
+                <img class="hero-image fadeIn wow" src="../../assets/images/main-photo.jpg" alt="avatar"/>
               </div>
               <div class="about">
                 <h1 class="about-title bounceInDown wow">About me</h1>
@@ -97,7 +113,7 @@
             namely my first certificate!</p>
                 </div>
                 <div class="certificate fadeIn wow">
-                   <img src="./assets/images/certificate.png" alt="certificate" width="500" height="300">
+                   <img src="../../assets/images/certificate.png" alt="certificate" width="500" height="300" data-easy-toggle="#modalWin" data-easy-class="show">
                 </div>
               </div>
             </div>
@@ -114,21 +130,21 @@
               <div class="cards">
 
                 <div class="card-container">
-                    <img class="profiles fadeIn wow" src="./assets/images/portfolio.png" alt="portfolio" width="350" height="210">
+                    <img class="profiles fadeIn wow" src="../../assets/images/portfolio.png" alt="portfolio" width="350" height="210">
                       <a href="https://rolling-scopes-school.github.io/leafdeharmony-JSFEPRESCHOOL/portfolio/" target="_blank">
                       <button class="btn-view">GO TO VIEW</button>
                     </a>
                 </div>
 
                 <div class="card-container fadeIn wow">
-                    <img class="profiles" src="./assets/images/shelter.png" alt="shelter" width="350" height="210">
+                    <img class="profiles" src="../../assets/images/shelter.png" alt="shelter" width="350" height="210">
                       <a href="https://rolling-scopes-school.github.io/leafdeharmony-JSFE2022Q1/shelter/pages/main/" target="_blank">
                       <button class="btn-view">GO TO VIEW</button>
                     </a>
                 </div>
 
                 <div class="card-container fadeIn wow">
-                    <img class="profiles" src="./assets/images/ecosounds.png" alt="ecosounds" width="350" height="210">
+                    <img class="profiles" src="../../assets/images/ecosounds.png" alt="ecosounds" width="350" height="210">
                       <a href="https://rolling-scopes-school.github.io/leafdeharmony-JSFEPRESCHOOL/eco-sounds/" target="_blank">
                       <button class="btn-view">GO TO VIEW</button>
                     </a>
@@ -146,16 +162,16 @@
             <div class="contacts-container">
               <div class="social-list fadeIn wow">
                 <a href="https://github.com/LeafdeHarmony" target="_blank">
-               <img class="social-icons" src="./assets/icons/github.svg" alt="github" width="35" height="35">
+               <img class="social-icons" src="../../assets/icons/github.svg" alt="github" width="35" height="35">
                 </a>
                 <a href="https://www.instagram.com/leafdeharmony/" target="_blank">
-               <img class="social-icons" src="./assets/icons/instagram.svg" alt="instagram" width="35" height="35">
+               <img class="social-icons" src="../../assets/icons/instagram.svg" alt="instagram" width="35" height="35">
                 </a>
                 <a href="https://t.me/leafdeharmony" target="_blank">
-               <img class="social-icons" src="./assets/icons/telegram.svg" alt="telegram" width="35" height="35">
+               <img class="social-icons" src="../../assets/icons/telegram.svg" alt="telegram" width="35" height="35">
                </a>
                 <a href="https://vk.com/leafdeharmony" target="_blank">
-               <img class="social-icons" src="./assets/icons/vk.svg" alt="vkontakte" width="35" height="35">
+               <img class="social-icons" src="../../assets/icons/vk.svg" alt="vkontakte" width="35" height="35">
                </a>
 
                </div>
@@ -166,7 +182,18 @@
           </div>
         </div>
       </footer>
+
+      <div class="modal" id="modalWin">
+        <div class="modal-window">
+          <img src="../../assets/images/certificate.png" alt="certificate">
+          <button class="btn-close" data-easy-toggle="#modalWin" data-easy-class="open">&times;</button>
+        </div>
+        <div class="overlay" data-easy-toggle="#modalWin" data-easy-class="open"></div>
+      </div>
+      
+      <script>!function(){"use strict";document.addEventListener("click",function(t){const e=t.target.closest("[data-easy-toggle]");if(e){t.preventDefault();let a=e.getAttribute("data-easy-toggle"),s=e.getAttribute("data-easy-class");try{document.querySelectorAll("[data-easy-toggle]").forEach(t=>{t.hasAttribute("data-easy-parallel")||t===e||document.querySelector(t.getAttribute("data-easy-toggle")).classList.remove(t.getAttribute("data-easy-class"))}),document.querySelector(a).classList.toggle(s)}catch(t){console.warn("EasyToggler.js : Блок "+a+" не существует")}}if(!e){let e=document.querySelectorAll("[data-easy-rcoe]");Array.from(e).forEach.call(e,function(e){let a=e.getAttribute("data-easy-toggle"),s=e.getAttribute("data-easy-class");if(!t.target.closest(a))try{document.querySelector(a).classList.remove(s)}catch(t){console.warn("EasyToggler.js : Блок "+a+" не существует")}})}})}();</script>
     <script src="wow.min.js"></script>
     <script>new WOW().init();</script>
+    <script src="./script.js"></script>
   </body>
 </html>
