--- a/tech-cv/pages/main/index.html
+++ b/tech-cv/pages/main/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="junior front-end developer"/>
-    <meta property="og:image" content="./assets/images/1.jpg"/>
+    <meta property="og:image" content="../../assets/images/1.jpg"/>
     <link rel="stylesheet" href="../main/styles.css" />
     <link rel="stylesheet" media="all" href="../main/animate.css">
-    <link rel="icon" href="./assets/icons/favicon.svg">
+    <link rel="icon" href="../../assets/icons/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
